# dynamodb-benchmark-tool

./: Cargo.toml  README.md  build-x86_64.sh
.github/workflows/: docker-build-push.yml
dynamodbbench/: Dockerfile
dynamodbbench/.github/workflows/: docker-build-push.yml
dynamodbbench/src/: main.rs
src/: main.rs
