[package]
name = "dynamodbbench"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.32.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hdrhistogram = "7.5.2"
