[package]
name = "dynamodbbench"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.64.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
